# nerdwave_ipc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  example.cpp
include/nerdwave_ipc/: message_queue.h
src/: message_queue.cpp
tests/: CMakeLists.txt  test_message_queue.cpp
